[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepprofile"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "SamKG", email = "samyak.k.gupta@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "nvtx",
  "cloudpickle",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/deepprofile#readme"
Issues = "https://github.com/unknown/deepprofile/issues"
Source = "https://github.com/unknown/deepprofile"

[tool.hatch.version]
path = "deepprofile/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "nvtx"
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=deepprofile --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "deepprofile/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
