[tool.poetry]
name = "deepprofile"
version = "0.0.11"
description = "In-code profiling for nVidia gpus"
authors = ["SamKG <samyak.k.gupta@gmail.com>"]
readme = "README.md"
packages = [{include = "deepprofile"}]

[tool.poetry.dependencies]
python = "^3.10"
nvtx = "^0.2.5"
cloudpickle = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
